feat: getallusers route
