# backend/api/requestHandlers/handlers/getUsers.js
@@ -1,7 +1,7 @@
 const {executeSQL} = require("../../../executeSQL");
 
     const getUsers = (req, res) => {
-        const sql = "SELECT name, email FROM user";
+        const sql = "SELECT u.name, u.email, r.name AS role, COUNT(l.id) AS total_accesses, MAX(l.created_at) AS last_access FROM user u LEFT JOIN role r ON r.id = u.role_id LEFT JOIN user_log l ON l.user_id = u.id GROUP BY u.id, u.name, u.email, r.name ORDER BY last_access DESC;";
         executeSQL(sql, null, (err, rows) => {
             if (err) {
                 return res.status(500).json({message: "Internal server error!"});
